--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Chats | Kakao Clone</title>
   </head>
   <body>
-    Hello World!!!
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span class="statuc-bar__clock">13:54</span>
+      </div>
+      <div class="status-bar__column"></div>
+    </div>
   </body>
 </html>
