--- a/friends.html
+++ b/friends.html
@@ -22,6 +22,7 @@
         <span class="status-bar__battery-level">100%</span>
       </div>
     </div>
+
     <header class="header">
       <div class="header__header-column">
         <h1 class="header__title">Friends</h1>
@@ -31,13 +32,78 @@
           <i class="fas fa-search"></i>
         </span>
         <span class="header__icon">
-          <i class="far fa-comment"></i>
-        </span>
-        <span class="header__icon">
           <i class="fas fa-cog"></i>
         </span>
       </div>
     </header>
+
+    <main class="friends">
+      <header class="friends">
+        <div class="friends__friend friend freind__lg">
+          <div class="friend__column">
+            <img
+              src="images/penguins.jpg"
+              alt=""
+              class="g-avatar friend__avatar"
+            />
+            <div class="friend_content">
+              <span class="friend__name">
+                My Name
+              </span>
+              <span class="friend__status">
+                My Informations
+              </span>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <div class="friends__plus">
+        <h5 class="friends__title">Plus friend</h5>
+        <div class="friends__friend friend">
+          <div class="friend__column">
+            <img
+              src="images/penguins.jpg"
+              alt=""
+              class="g-avatar friend__avatar"
+            />
+            <div class="friend_content">
+              <span class="friend__name">
+                Plus Friend
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <ul class="friends__list">
+        <h5 class="friends__title">Friends 14</h5>
+        <li class="friends__friend friend freind">
+          <div class="friend__column">
+            <img
+              src="images/penguins.jpg"
+              alt=""
+              class="g-avatar friend__avatar"
+            />
+            <div class="friend_content">
+              <span class="friend__name">
+                My Name
+              </span>
+              <span class="friend__status">
+                My Informations
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__now-listening">
+              <span>지독하게 - FTISLAND(FT.ISLAND)</span>
+              <i class="fas fa-play"></i>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list_item">
