--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
         </span>
       </div>
     </header>
+
+    <main class="chats">
+      <ul class="chats__list">
+        <li class="chats__chat">
+          <div class="chat__column">
+            <img
+              src="images/penguins.jpg"
+              alt=""
+              class="chat__avatar g-avatar"
+            />
+            <div class="chat__content">
+              <span class="chat__username">Lynn</span>
+              <span class="chat__preview">Going Home</span>
+            </div>
+          </div>
+          <div class="chat__column">
+            <span class="chat__timestamp">Yesterday</span>
+          </div>
+        </li>
+      </ul>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list_item">
