--- a/index.html
+++ b/index.html
@@ -42,20 +42,22 @@
     <main class="chats">
       <ul class="chats__list">
         <li class="chats__chat">
-          <div class="chat__column">
-            <img
-              src="images/penguins.jpg"
-              alt=""
-              class="chat__avatar g-avatar"
-            />
-            <div class="chat__content">
-              <span class="chat__username">Lynn</span>
-              <span class="chat__preview">Going Home</span>
+          <a href="chat.html">
+            <div class="chat__column">
+              <img
+                src="images/penguins.jpg"
+                alt=""
+                class="chat__avatar g-avatar"
+              />
+              <div class="chat__content">
+                <span class="chat__username">Lynn</span>
+                <span class="chat__preview">Going Home!</span>
+              </div>
             </div>
-          </div>
-          <div class="chat__column">
-            <span class="chat__timestamp">Yesterday</span>
-          </div>
+            <div class="chat__column">
+              <span class="chat__timestamp">Yesterday</span>
+            </div>
+          </a>
         </li>
       </ul>
     </main>
