--- a/more.html
+++ b/more.html
@@ -34,10 +34,81 @@
           <i class="fas fa-qrcode"></i>
         </span>
         <span class="header__icon">
-          <i class="fas fa-cog"></i>
+          <a href="settings.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </span>
       </div>
     </header>
+
+    <main class="more">
+      <header class="more__header">
+        <div class="friends__friend friend freind">
+          <div class="friend__column">
+            <img
+              src="images/penguins.jpg"
+              alt=""
+              class="g-avatar friend__avatar"
+            />
+            <div class="friend_content">
+              <span class="friend__name">
+                My Name
+              </span>
+              <span class="friend__status">
+                email@email.com
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <i class="far fa-coment-alt fa-2x"></i>
+          </div>
+        </div>
+        <ul class="more__btn-list">
+          <li class="more__btn">
+            <span class="more__btn-icon"
+              ><i class="far fa-smile fa-2x"></i
+            ></span>
+            <span class="more__btn-title">Emoticions</span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon"
+              ><i class="fas fa-brush fa-2x"></i
+            ></span>
+            <span class="more__btn-title">Themes</span>
+          </li>
+          <li class="more__btn">
+            <span class="more__btn-icon">
+              <i class="fab fa-kickstarter-k fa-2x"></i>
+            </span>
+            <span class="more__btn-title">Account</span>
+          </li>
+        </ul>
+      </header>
+      <section class="more__suggestions">
+        <h5 class="more__title">Suggestions</h5>
+        <ul class="more__suggestions-list">
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-quote-right fa-2x"></i>
+            </span>
+            <span class="suggestion__title">Kakao Story</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-beer fa-2x"></i>
+            </span>
+            <span class="suggestion__title">Kakao Friends</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon"
+              ><i class="fas fa-gamepad fa-2x"></i
+            ></span>
+            <span class="suggestion__title">Freinds Gem</span>
+          </li>
+        </ul>
+      </section>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list_item">
