--- a/friends.html
+++ b/friends.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/34a8d510cf.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" hrdf="css/style.css" />
     <title>Friends | Kakao Clone</title>
   </head>
   <body>
