--- a/find.html
+++ b/find.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/34a8d510cf.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" hrdf="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Find | Kakao Clone</title>
   </head>
   <body>
@@ -71,11 +71,7 @@
         <h5 class="find__title">Recommended</h5>
         <li class="friends__friend friend freind">
           <div class="friend__column">
-            <img
-              src="images/penguins.jpg"
-              alt=""
-              class="g-avatar friend__avatar"
-            />
+            <img src="images/penguins.jpg" alt="" class="friend__avatar" />
             <div class="friend_content">
               <span class="friend__name">
                 Who's Name
