--- a/friends.html
+++ b/friends.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/34a8d510cf.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" hrdf="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Friends | Kakao Clone</title>
   </head>
   <body>
@@ -47,7 +47,7 @@
               alt=""
               class="g-avatar friend__avatar"
             />
-            <div class="friend_content">
+            <div class="friend__content">
               <span class="friend__name">
                 My Name
               </span>
@@ -66,7 +66,7 @@
             <img
               src="images/penguins.jpg"
               alt=""
-              class="g-avatar friend__avatar"
+              class="m-avatar friend__avatar"
             />
             <div class="friend_content">
               <span class="friend__name">
@@ -79,14 +79,14 @@
 
       <ul class="friends__list">
         <h5 class="friends__title">Friends 14</h5>
-        <li class="friends__friend friend freind">
+        <li class="friends__friend friend friend--lg">
           <div class="friend__column">
             <img
               src="images/penguins.jpg"
               alt=""
-              class="g-avatar friend__avatar"
+              class="m-avatar friend__avatar"
             />
-            <div class="friend_content">
+            <div class="friend__content">
               <span class="friend__name">
                 My Name
               </span>
