--- a/more.html
+++ b/more.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/34a8d510cf.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" hrdf="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>More | Kakao Clone</title>
   </head>
   <body>
@@ -51,7 +51,7 @@
               alt=""
               class="g-avatar friend__avatar"
             />
-            <div class="friend_content">
+            <div class="friend__content">
               <span class="friend__name">
                 My Name
               </span>
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="friend__column">
-            <i class="far fa-coment-alt fa-2x"></i>
+            <i class="far fa-comment-alt fa-2x"></i>
           </div>
         </div>
         <ul class="more__btn-list">
