--- a/chat.html
+++ b/chat.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/34a8d510cf.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" hrdf="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Chat | Kakao Clone</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <a href="index.html">
+        <a href="index.html" class="header__back-btn">
           <i class="fas fa-arrow-left fa-2x"></i>
         </a>
         <h1 class="header__title">Best Friend</h1>
