--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/34a8d510cf.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" hrdf="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Chats | Kakao Clone</title>
   </head>
   <body>
@@ -44,19 +44,27 @@
       <ul class="chats__list">
         <li class="chats__chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <img
-                src="images/penguins.jpg"
-                alt=""
-                class="chat__avatar g-avatar"
-              />
-              <div class="chat__content">
-                <span class="chat__username">Lynn</span>
-                <span class="chat__preview">Going Home!</span>
+            <div class="chats__chat friend friend--lg">
+              <div class="friend__column">
+                <img
+                  src="images/penguins.jpg"
+                  alt=""
+                  class="m-avatar friend__avatar"
+                />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Lynn
+                  </span>
+                  <span class="friend__bottom-text">
+                    Going Home!
+                  </span>
+                </div>
               </div>
-            </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">Yesterday</span>
+              <div class="friend__column">
+                <div class="friend__now-listening">
+                  <span class="chat__timestamp">March 8</span>
+                </div>
+              </div>
             </div>
           </a>
         </li>
@@ -72,6 +80,7 @@
         </li>
         <li class="nav__list_item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
           </a>
         </li>
