--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/34a8d510cf.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" hrdf="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Settings | Kakao Clone</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
     <header class="header">
       <div class="header__header-column">
         <a href="more.html">
-          <i class="fas fa-arrow-left fa-2x"></i>
+          <i class="fas fa-arrow-left"></i>
         </a>
         <h1 class="header__title">Settings</h1>
       </div>
