--- a/friends.html
+++ b/friends.html
@@ -39,8 +39,8 @@
     </header>
 
     <main class="friends">
-      <header class="friends">
-        <div class="friends__friend friend freind__lg">
+      <header class="friends__header">
+        <div class="friends__friend friend">
           <div class="friend__column">
             <img
               src="images/penguins.jpg"
@@ -96,10 +96,11 @@
             </div>
           </div>
           <div class="friend__column">
-            <div class="friend__now-listening">
-              <span>지독하게 - FTISLAND(FT.ISLAND)</span>
-              <i class="fas fa-play"></i>
-            </div>
+            <span class="friend__now-listening">
+              <span>
+                지독하게 - FTISLAND(FT.ISLAND) <i class="fas fa-play"></i>
+              </span>
+            </span>
           </div>
         </li>
       </ul>
