--- a/settings.html
+++ b/settings.html
@@ -23,9 +23,10 @@
         <span class="status-bar__battery-level">100%</span>
       </div>
     </div>
+
     <header class="header">
       <div class="header__header-column">
-        <a href="more.html">
+        <a href="more.html" class="header__back-btn">
           <i class="fas fa-arrow-left"></i>
         </a>
         <h1 class="header__title">Settings</h1>
@@ -36,20 +37,21 @@
         </span>
       </div>
     </header>
+
     <main class="settings">
       <section class="settings__sections">
-        <ul class="settings_list">
-          <li class="settings_setting">
-            <span class="settings_icon"><i class="fas fa-lock"></i></span>
-            <span class="settings_title">Privacy</span>
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon"><i class="fas fa-lock"></i></span>
+            <span class="settings__title">Privacy</span>
           </li>
-          <li class="settings_setting">
-            <span class="settings_icon"><i class="far fa-bell"></i></span>
-            <span class="settings_title">Notifications</span>
+          <li class="settings__setting">
+            <span class="settings__icon"><i class="far fa-bell"></i></span>
+            <span class="settings__title">Notifications</span>
           </li>
-          <li class="settings_setting">
-            <span class="settings_icon"><i class="far fa-user"></i></span>
-            <span class="settings_title">Friends</span>
+          <li class="settings__setting">
+            <span class="settings__icon"><i class="far fa-user"></i></span>
+            <span class="settings__title">Friends</span>
           </li>
         </ul>
       </section>
