--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Chat | Kakao Clone</title>
   </head>
-  <body>
+
+  <body class="chats-body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="statuc-bar__clock">13:54</span>
@@ -39,21 +40,33 @@
         </span>
       </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">금요일, 1월 11일, 오후 12시 17분</span>
         <li class="incoming-message message">
           <img src="images/penguins.jpg" alt="" class="g-avatar message" />
           <div class="message__content">
             <span class="message__author">Best Friend</span>
-            <div class="meggage__bubble">Congrats I Love you!</div>
+            <span class="message__bubble">Congrats I Love you!</span>
           </div>
-          <span class="message__timestamp"></span>
         </li>
-        <li class="incoming-message message">
+        <li class="sent-message message">
           <span class="message__timestamp"></span>
           <div class="message__content">
-            <div class="meggage__bubble">Thank you!</div>
+            <span class="message__bubble">Thank you!</span>
+          </div>
+        </li>
+        <li class="incoming-message message">
+          <img src="images/penguins.jpg" alt="" class="g-avatar message" />
+          <div class="message__content">
+            <span class="message__author">Best Friend</span>
+            <span class="message__bubble">Okay see you later~</span>
+          </div>
+        </li>
+        <li class="sent-message message">
+          <span class="message__timestamp"></span>
+          <div class="message__content">
+            <span class="message__bubble">Ok bye~</span>
           </div>
         </li>
       </ul>
