--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </nav>
 
     <div class="bigScreen">
-      <span class="bigScreen__text">Please make your screen small</span>
+      <span class="bigScreen__text">Please make your screen small ㅇㅅㅇ</span>
     </div>
   </body>
 </html>
